@@ -1,0 +1,6 @@
+Tests single resource search in inspector page agent with non existing resource url does not cause a crash.
+
+Bug 69767  
+Search matches: 
+
+
